$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-1 (opened September 20, 2011)

	* permatfull/swap is using the new simulate(nullmodel(...)...)
	infrastructure. permatfull1 and permatswap1 removed from vegan 
	devel.

	* Value of 'mode' is set to "double" for the following
	null model algorithms in make.commsim: abuswap_r, abuswap_c,
	r00_samp, r0_samp, c0_samp. These can take any nonnegative real 
	valued matrix as input. nullmodel function now handles storage
	mode reliably.

	* meandist bug fix: tapply() function used to find mean group x
	group dissimilarities could reorder the class levels and return a
	confused matrix. This could happen in particular when the
	'grouping' was a vector of integers which then were ordered
	alphabetically so that "1" < "10" < "2". Now uses internally more
	stable way of applying tapply() which should have the danger of
	reordering the levels.  Incidentally, this also seems to be
	faster. The problem was found by Dr Miguel Alvarez (Univ Bonn).

	* nestedness.c: changed interface in "swapcount" and "rswapcount"
	which now require integer data matrix. The first argument in .C
	call should now be defined as as.integer() instead of old
	as.double().

	* New functions: commsim is used to define Null Model Algorithms
	via a function that returns n x m x nsim array of simulated
	matrices based on structural constraints. make.commsim contains
	Null Model Algorithms already defined in vegan from commsimulator
	and permat* functions (and some more).  The nullmodel function
	creates an environment, where statistics of the input matrix are
	stored. The environment also stores updated status of sequential
	algorithms and current number of iterations. The update and
	simulate methods are used to update the nullmodel (for sequential
	algorithms) or simulate random matrices, respectively. The
	simulate method returns the n x m x nsim array (simmat class).
	Efficiency gains are sometimes high (because marginal statistics